# scuffed_minecraft

./: CMakeLists.txt
assets/shaders/: shader.fs  shader.h  shader.vs
include/PerlinNoise/: test
include/glad/: glad.c  glad.h
src/: main.cpp  readme.md
